# modern-cpp-project

./: .gitignore  CMakeLists.txt  Example.cpp  Example.hpp  project-setup.sh  readme.md  xmake.lua
app/: CMakeLists.txt  app.cpp  xmake.lua
include/ric/: max.hpp
script/: fedora.sh  setup.sh
script/include/: functions.sh
script/include/fedora_38/: main.sh
setup/include/: functions.sh
src/: CMakeLists.txt  max.cpp  xmake.lua
test/: CMakeLists.txt  ExampleTests.cpp  max.test.cpp  xmake.lua
